Updates for new publishing model with travis and coveralls